# ParallelDP

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  README.md  install.sh  test.cpp
include/: data.h  dsl.h  glws.h  lcs.h  lcs_cilk.h  lis.h  problem.h  recognizer.h  segment_tree.h  segment_tree_cilk.h  segment_tree_cilk_opt.h  tournament_tree.h  tree.h  utils.h
src/: glws.cpp  lcs.cpp  lis.cpp  tmp.cpp
src/dp/: lcs.cpp  lis.cpp
src/include/: lis.h  problem.h  tournament_tree.h  utils.h
src/tree/: tounament_tree.cpp
tests/: test_dsl.cpp  test_glws.cpp  test_lcs.cpp  test_lis.cpp
tests/dp_tests/: lcs_test.cpp  lis_test.cpp
tests/tree_tests/: segment_tree.cpp  tree_test.cpp
